[project]
name = "probing-docs"
version = "0.1.0"
description = "Documentation for Probing - Dynamic Performance Profiler for Distributed AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-material-extensions>=1.3.0",
    "mkdocs-static-i18n>=1.0.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
    "jieba>=0.42.1",
]

[tool.uv]
dev-dependencies = [
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]
